board/orangepi-5: add ap6275p wireless module support
Update u-boot dts
Add firmware reqiured by ap6275p
Add few bsp packages from RockChip, still testing though

--- a/configs/orangepi_5_defconfig
+++ b/configs/orangepi_5_defconfig
@@ -1,10 +1,9 @@
 BR2_aarch64=y
 BR2_cortex_a76_a55=y
-BR2_KERNEL_HEADERS_CUSTOM_GIT=y
-BR2_KERNEL_HEADERS_CUSTOM_REPO_URL="https://github.com/orangepi-xunlong/linux-orangepi.git"
-BR2_KERNEL_HEADERS_CUSTOM_REPO_VERSION="orange-pi-5.10-rk3588"
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_10=y
+BR2_PACKAGE_GLIBC_UTILS=y
 BR2_BINUTILS_VERSION_2_39_X=y
+BR2_BINUTILS_GPROFNG=y
 BR2_GCC_VERSION_12_X=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_GCC_ENABLE_OPENMP=y
@@ -14,6 +13,7 @@ BR2_PACKAGE_HOST_GDB_TUI=y
 BR2_PACKAGE_HOST_GDB_PYTHON3=y
 BR2_GDB_VERSION_12=y
 BR2_TOOLCHAIN_EXTRA_LIBS="libasan liblsan libtsan libubsan"
+BR2_TARGET_LDFLAGS="-Wl,-z,noexecstack"
 BR2_ENABLE_DEBUG=y
 BR2_DEBUG_3=y
 BR2_ENABLE_LTO=y
@@ -21,6 +21,7 @@ BR2_GLOBAL_PATCH_DIR="board/orangepi/orangepi-5/patches"
 BR2_FORTIFY_SOURCE_2=y
 BR2_TARGET_GENERIC_HOSTNAME="orangepi-5"
 BR2_TARGET_GENERIC_ISSUE="Welcome to orangepi-5"
+BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 BR2_ROOTFS_MERGED_USR=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="orangepi-5"
 BR2_TARGET_GENERIC_GETTY_TERM="linux"
@@ -28,19 +29,27 @@ BR2_SYSTEM_DHCP="eth0"
 BR2_ROOTFS_OVERLAY="board/orangepi/orangepi-5/overlays"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/orangepi/orangepi-5/post-image.sh"
 BR2_LINUX_KERNEL=y
-BR2_LINUX_KERNEL_CUSTOM_GIT=y
-BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/orangepi-xunlong/linux-orangepi.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="orange-pi-5.10-rk3588"
+BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
+BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,orangepi-xunlong,linux-orangepi,eb1c681e5184e51d8ce1f351559d149d17f48b57)/linux-orangepi-eb1c681e5184e51d8ce1f351559d149d17f48b57.tar.gz"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/orangepi/orangepi-5/linux.config"
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/orangepi/orangepi-5/linux.defconfig"
 BR2_LINUX_KERNEL_ZSTD=y
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="rockchip/rk3588s-orangepi-5"
 BR2_LINUX_KERNEL_DTB_OVERLAY_SUPPORT=y
+BR2_PACKAGE_ROCKCHIP=y
 BR2_PACKAGE_BUSYBOX_CONFIG="board/orangepi/orangepi-5/busybox.config"
+BR2_PACKAGE_GDB=y
+BR2_PACKAGE_LIBV4L=y
+BR2_PACKAGE_LIBV4L_UTILS=y
+BR2_PACKAGE_OPENSSH=y
+# BR2_PACKAGE_OPENSSH_CLIENT is not set
+BR2_PACKAGE_WIRELESS_REGDB=y
+BR2_PACKAGE_WPA_SUPPLICANT=y
+BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
-BR2_TARGET_ROOTFS_EXT2_SIZE="150M"
+BR2_TARGET_ROOTFS_EXT2_SIZE="175M"
 BR2_TARGET_ROOTFS_TAR_ZSTD=y
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
